🐛 FIX: Ideavim keybindings

--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -174,9 +174,9 @@ map <leader>gc <Action>(CheckinProject)
 map <leader>gs <Action>(ActivateVersionControlToolWindow)
 map <leader>gb <Action>(Git.Branches)
 """ Popup navigation -------------------
-inoremap <C-j> <Action>(PopupMenu-selectNext)
-inoremap <C-k> <Action>(PopupMenu-selectPrev)
-inoremap <C-y> <Action>(PopupMenu-return)
+imap <C-j> <Action>(PopupMenu-selectNext)
+imap <C-k> <Action>(PopupMenu-selectPrev)
+imap <C-y> <Action>(PopupMenu-return)
 """ Searching and Source Code Navigation -------------------
 nmap <C-/> <Action>(FindInPath)
 nmap <C-a> <Action>(GotoAction)
@@ -186,7 +186,7 @@ nmap <leader>h <Action>(CallHierarchy)
 nmap <leader>b <Action>(ShowNavBar)
 nmap <C-s> <Action>(FileStructurePopup)
 nmap <C-y> <Action>(GotoSymbol)
-nmap <leader>fs <Action>(GotoSymbol)
+nmap <leader>fy <Action>(GotoSymbol)
 nmap <leader>ff <Action>(GotoFile)
 nmap <leader>fc <Action>(GotoClass)
 nmap <leader>fa <Action>(GotoAction)
