--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -117,13 +117,13 @@ set-option -g status-fg '#C5C8C6'
 set-option -g status-left-length 50
 set-option -g status-right "#{pane_index} | #(date '+%a, %b %d - %H:%M') "
 set-option -g status-interval 60
+set-option -g status-position top
 
 # source system-specific files
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-macos.conf' 'source ~/.tmux-linux.conf'
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
