📦 NEW: Keybindings for usages

--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -180,7 +180,8 @@ imap <C-y> <Action>(PopupMenu-return)
 """ Searching and Source Code Navigation -------------------
 nmap <C-/> <Action>(FindInPath)
 nmap <C-a> <Action>(GotoAction)
-nmap <leader>u <Action>(FindUsages)
+nmap <leader>u <Action>(ShowUsages)
+nmap <leader>U <Action>(FindUsages)
 nmap <leader>s <Action>(GotoRelated)
 nmap <leader>h <Action>(CallHierarchy)
 nmap <leader>b <Action>(ShowNavBar)
