👌 IMPROVE: start log file at the end in insert mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -94,7 +94,7 @@ bind-key h split-window -h "btm"
 
 # Quickly edit todo/notes file
 bind-key t split-window -h "nvim ~/notes/NOTES.md"
-bind-key T split-window -h "nvim ~/notes/log.md"
+bind-key T split-window -h "nvim + -c 'normal Go' -c 'startinsert' ~/notes/log.md"
 
 # Quickly edit a file in your wiki
 bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
