--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -92,6 +92,9 @@ nmap <leader>n <Action>(NextWindow)
 map <leader>x <Action>(CloseContent)
 map <leader>X <Action>(ReopenClosedTab)
 map <leader>qa <Action>(CloseAllEditors)
+" move visual selection
+vnoremap J :m '>+1<CR>gv=gv
+vnoremap K :m '<-2<CR>gv=gv
 """ Editing source code -------------------
 " make dot work on visual line selections.
 xnoremap . :norm.<CR>
@@ -99,6 +102,9 @@ xnoremap . :norm.<CR>
 noremap Y y$
 " U for redo, the opposite of u for undo.
 nnoremap U <C-r>
+" insert mode mappings
+inoremap aaf ->
+inoremap faf =>
 "-----------------------------
 " readline-like mappings
 "-----------------------------
