👌 IMPROVE: Remap ideavim

--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -170,7 +170,6 @@ nmap <leader>rr <Action>(Refactorings.QuickListPopupAction)
 nmap <leader>rp <Action>(IntroduceParameter)
 nmap <leader>im <Action>(ImplementMethods)
 nmap <leader>om <Action>(OverrideMethods)
-nmap <leader>qf <Action>(ShowIntentionActions)
 nmap <leader>qd <Action>(QuickJavaDoc)
 nmap <leader>qt <Action>(QuickTypeDefinition)
 nmap <leader>qi <Action>(QuickImplementations)
@@ -211,12 +210,14 @@ nnoremap <C-S-g> :!echo % \| sed "s#${HOME}#~#"<CR>
 nmap <C-p> <Action>(JumpToLastWindow)
 nmap <C-q> <Action>(HideAllWindows)
 """ Running and Debugging -------------------
+nmap \s <Action>(ShowIntentionActions)
 nmap \c <Action>(ContextRun)
 nmap \a <Action>(RunClass)
 nmap \o <Action>(ChooseRunConfiguration)
 nmap \t <Action>(ActivateRunToolWindow)
 nmap \i <Action>(Run)
 nmap \r <Action>(Rerun)
+nmap \u <Action>(RiderUnitTestRunContextAction)
 nmap \f <Action>(RerunFailedTests)
 nmap \b <Action>(ToggleLineBreakpoint)
 nmap \g <Action>(ContextDebug)
