--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -214,11 +214,11 @@ nmap \s <Action>(ShowIntentionActions)
 nmap \c <Action>(ContextRun)
 nmap \a <Action>(RunClass)
 nmap \o <Action>(ChooseRunConfiguration)
-nmap \t <Action>(ActivateRunToolWindow)
+nmap \w <Action>(ActivateRunToolWindow)
 nmap \i <Action>(Run)
 nmap \r <Action>(Rerun)
 nmap \u <Action>(RiderUnitTestRunContextAction)
-nmap \f <Action>(RerunFailedTests)
+nmap \t <Action>(RerunFailedTests)
 nmap \b <Action>(ToggleLineBreakpoint)
 nmap \g <Action>(ContextDebug)
 nmap \d <Action>(Debug)
