👌 IMPROVE: more ideavim

--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -140,7 +140,6 @@ nmap <leader>p <Action>(PasteMultiple)
 nmap <leader>zc <Action>(CollapseAllRegions)
 nmap <leader>zo <Action>(ExpandAllRegions)
 nmap <leader>c <Action>(CommentByLineComment)
-nmap <leader>r <Action>(RecentFiles)
 nmap <leader>f <Action>(GotoFile)
 nmap <leader>gn <Action>(Generate)
 nmap <leader>h <Action>(TogglePopupHints)
@@ -151,6 +150,7 @@ nmap <leader>= <Action>(ReformatCode)
 nmap ,a <Action>(Annotate)
 nmap ,h <Action>(LocalHistory.ShowHistory)
 nmap ,l <Action>(RecentLocations)
+nmap ,f <Action>(RecentFiles)
 nmap ,p <Action>(ReformatWithPrettierAction)
 nmap ,q <Action>(Refactorings.QuickListPopupAction)
 nmap ,r <Action>(RefactoringMenu)
@@ -187,7 +187,6 @@ nmap <C-/> <Action>(FindInPath)
 nmap <C-a> <Action>(GotoAction)
 nmap <leader>u <Action>(ShowUsages)
 nmap <leader>U <Action>(FindUsages)
-nmap <leader>s <Action>(GotoRelated)
 nmap <leader>h <Action>(CallHierarchy)
 nmap <leader>b <Action>(ShowNavBar)
 nmap <C-s> <Action>(FileStructurePopup)
@@ -199,9 +198,10 @@ nmap <leader>fa <Action>(GotoAction)
 nmap <leader>fg <Action>(FindInPath)
 nmap <leader>fr <Action>(ReplaceInPath)
 nmap <leader>fs <Action>(NewScratchFile)
+nmap gr <Action>(GotoRelated)
 nmap gi <Action>(GotoImplementation)
 nmap gd <Action>(GotoDeclaration)
-nmap gp <Action>(GotoSuperMethod)
+nmap gs <Action>(GotoSuperMethod)
 nmap gt <Action>(GotoTest)
 nmap [b <Action>(Back)
 nmap ]b <Action>(Forward)
