📦 NEW: wiki keybindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -97,7 +97,8 @@ bind-key t split-window -h "nvim ~/notes/NOTES.md"
 bind-key T split-window -h "nvim + -c 'normal Go' -c 'startinsert' ~/notes/log.md"
 
 # Quickly edit a file in your wiki
-bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
+bind-key v split-window -h -c ~/notes "bat $(fd | fzy) | most"
+bind-key V split-window -h -c ~/notes "nvim $(fd | fzy)"
 
 # session navigation
 bind w display-popup -E "tmux-sessionizer"
