--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,10 +34,10 @@ set -g renumber-windows on
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config!"
 
-# Remap prefix from 'C-b' to 'C-i'
+# Remap prefix from 'C-b' to 'C-s'
 unbind C-b                  # remove bind for C-b
-set-option -g prefix C-i
-bind-key -r C-i send-prefix
+set-option -g prefix C-s
+bind-key -r C-s send-prefix
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
