📦 NEW: convenience vertical jumping in idea

--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -85,6 +85,8 @@ nnoremap <C-h> <C-w>h
 nnoremap <C-l> <C-w>l
 nnoremap <C-j> <C-w>j
 nnoremap <C-k> <C-w>k
+nnoremap <C-d> <C-d>zz
+nnoremap <C-u> <C-u>zz
 nmap <s-TAB> <Action>(PreviousTab)
 nmap <TAB> <Action>(NextTab)
 nmap <leader>en <Action>(EditSourceInNewWindow)
