👌 IMPROVE: use different keybinds for splitting windows

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -66,9 +66,7 @@ bind -n S-Right next-window
 
 # panes: window splitting
 unbind %
-bind '\' split-window -h -c '#{pane_current_path}'
-unbind '"'
-bind - split-window -v -c '#{pane_current_path}'
+bind "'" split-window -h -c '#{pane_current_path}'
 
 # resize panes
 bind -r H resize-pane -L 5   # 5 px bigger to the left
