--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,6 +59,8 @@ set-option -s set-clipboard off
 bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
